# DnD

./: CMakeLists.txt  CharacterInfo.h  CharacterSheet.csv  Ptaszki.h  card.cpp  card.h  card.ui  character.h  charactermodel.cpp  charactermodel.h  createcharacter.cpp  createcharacter.h  createcharacter.ui  editabilitiesdialog.cpp  editabilitiesdialog.h  editcharacterdialog.cpp  editcharacterdialog.h  loadiconfromfiles.cpp  loadiconfromfiles.h  lvl.cpp  lvl.h  lvl.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapa.cpp  mapa.h  mapwidget.cpp  mapwidget.h  player.cpp  player.h  resources.qrc  selectcharacter.cpp  selectcharacter.h  selectcharacter.ui  skillsproxymodel.cpp  skillsproxymodel.h  stringfiltermodel.cpp  stringfiltermodel.h  usedfiltermodel.cpp  (+4 more)
